force-app/main/default/objects/BBQ_Budget_Items__c/BBQ_Budget_Items__c.object-meta.xml
<CustomObject>
    <label>BBQ Budget Items</label>
    <nameField>
        <displayFormat>Budget Items-{000}</displayFormat>
        <label>BBQ Budget Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BBQ Budgets Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>