force-app/main/default/objects/BBQ_Budget_Items__c/fields/AmountT__c.field-meta.xml
<CustomField>
    <fullName>AmountT__c</fullName>
    <description>Total value of purchased products</description>
    <formula>Quantity__c * Product__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total value of purchased products</inlineHelpText>
    <label>AmountT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>