force-app/main/default/objects/BBQ_Budget_Items__c/fields/BBQ_Budget__c.field-meta.xml
<CustomField>
    <fullName>BBQ_Budget__c</fullName>
    <description>Link this budget line to a grilling budget.</description>
    <label>BBQ Budget</label>
    <referenceTo>BBQ_Budget__c</referenceTo>
    <relationshipLabel>BBQ Budgets Items</relationshipLabel>
    <relationshipName>BBQ_Budgets_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>