force-app/main/default/objects/BBQ_Budget_Items__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to a product or service included in the budget item.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>BBQ Budgets Items</relationshipLabel>
    <relationshipName>BBQ_Budgets_Items</relationshipName>
    <type>Lookup</type>
</CustomField>