force-app/main/default/objects/BBQ_Budget_Items__c/fields/Record_Type_Product__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Product__c</fullName>
    <formula>Product__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Product</label>
    <type>Text</type>
</CustomField>