force-app/main/default/objects/BBQ_Budget_Items__c/validationRules/add_items_status_new.validationRule-meta.xml
<ValidationRule>
    <fullName>add_items_status_new</fullName>
    <active>true</active>
    <description>Items cannot be added to a quote that is not in &#39;New&#39; status</description>
    <errorConditionFormula>NOT(ISPICKVAL( BBQ_Budget__r.Status__c, &quot;New&quot;))</errorConditionFormula>
    <errorMessage>Budget items cannot be added to a budget that is not in &#39;New&#39; status.</errorMessage>
</ValidationRule>