force-app/main/default/objects/BBQ_Budget_Items__c/validationRules/Only_Read_Mount.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Read_Mount</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Amount__c)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>This field is read-only</errorMessage>
</ValidationRule>