force-app/main/default/objects/BBQ_Budget_Items__c/validationRules/ProductoActivoValidacion.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductoActivoValidacion</fullName>
    <active>true</active>
    <description>Activate the product to be used</description>
    <errorConditionFormula>NOT(Product__r.IsActive )</errorConditionFormula>
    <errorMessage>The product must be active to be added to the quote.</errorMessage>
</ValidationRule>