force-app/main/default/objects/BBQ_Budget_Items__c/validationRules/quantity_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>quantity_positive</fullName>
    <active>true</active>
    <description>Quantity must be greater than 0</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>The amount must be greater than 0.</errorMessage>
</ValidationRule>