force-app/main/default/objects/BBQ_Budget_Items__c/listViews/BBQ_Items.listView-meta.xml
<ListView>
    <fullName>BBQ_Items</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>BBQ_Budget__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Quantity__c</columns>
    <columns>Product__c</columns>
    <filterScope>Mine</filterScope>
    <label>BBQ Items</label>
</ListView>