force-app/main/default/objects/BBQ_Budget_Items__c/listViews/List_Items.listView-meta.xml
<ListView>
    <fullName>List_Items</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>BBQ_Budget__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>List Items</label>
</ListView>